sass lib : added overflow-clip, grid-col-end and grid-row-end fix. Stories: added more option to grid interactive demo.

--- a/src/scss/_lib/classes_generators/_grid.scss
+++ b/src/scss/_lib/classes_generators/_grid.scss
@@ -48,11 +48,14 @@
         grid-column-start: span #{$i};
       }
 
-      .col-end#{$infix}-#{$i} {
-        grid-column-end: #{$i};
-      }
       .col-end-span#{$infix}-#{$i} {
         grid-column-end: span #{$i};
+      }
+    }
+
+    @for $i from 1 through grid.$grid-columns + 1 {
+      .col-end#{$infix}-#{$i} {
+        grid-column-end: #{$i};
       }
     }
 
@@ -119,11 +122,14 @@
         grid-row-start: span #{$i};
       }
 
-      .row-end#{$infix}-#{$i} {
-        grid-row-end: #{$i};
-      }
       .row-end-span#{$infix}-#{$i} {
         grid-row-end: span #{$i};
+      }
+    }
+
+    @for $i from 1 through grid.$grid-rows + 1 {
+      .row-end#{$infix}-#{$i} {
+        grid-row-end: #{$i};
       }
     }
 
